# Leeup_TV

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.example.json  config.json  pyproject.toml  requirements.txt  接口源.txt
data/: tvbox_source_probe_report.json
rikka_tv/: app.py  config.py  db.py  douban.py  hls_proxy.py  maccms.py  recommend.py  speedtest.py
scripts/: probe_tvbox_sources.py
static/: site.webmanifest
static/css/: app.css
static/js/: continue.js  detail.js  images.js  mobile_nav.js  notice.js  player.js  recommend.js  search_feedback.js  settings_menu.js
templates/: _douban_card.html  _mobile_nav_icon.html  _record_card.html  _video_card.html  base.html  browse.html  category.html  detail.html  index.html  play.html  search.html
