[project]
name = "rikka-tv"
version = "0.1.0"
description = "A FastAPI + SQLite video aggregation site with multi-source speed preference."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.122",
  "uvicorn[standard]>=0.38",
  "jinja2>=3.1",
  "python-multipart>=0.0.20",
  "requests>=2.32",
  "itsdangerous>=2.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "httpx>=0.28",
]
